Added performance/BDD test for a TopOfBook (Small realistic POJO) (#559)
* Added performance/BDD test for a TopOfBook (Small realistic POJO)

* assumeFalse(Jvm.isAzulZing())

Co-authored-by: Peter Lawrey <peter.lawrey@chronicle.software>